--- a/milestone_1/index.html
+++ b/milestone_1/index.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+        integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+        crossorigin="anonymous" />
+
     <link rel="stylesheet" href="./asset/CSS/style.css">
     <title>Boolzapp 1</title>
 </head>
@@ -16,15 +20,57 @@
 
     <!-- main site  -->
     <main>
+        <!-- Schermata= sidebar + chat  -->
         <div class="schermata">
-            <aside class="sidebar">
+            <aside class="sidebar d-flex-col">
+
+                <!-- Avatar : IO  -->
+                <div class="fixed-avatar w100">
+
+                    <div class="user">
+                        <img src="./asset/IMG/avatar_io.jpg" class="user-avatar" alt="">
+                        <p class="user-info">Nome utente</p>
+                    </div>
+
+                    <div class="icons">
+                        <i class="fas fa-circle-notch"></i>
+                        <i class="fas fa-comment-alt"></i>
+                        <i class="fas fa-ellipsis-v"></i>
+                    </div>
+                </div>
+                <!-- /Avatar : IO  -->
+
+                <div class="notifiche w100">
+                    <div class="bell">
+                        <i class="fas fa-bell-slash"></i>
+                    </div>
+                    <div class="notifiche-text">
+                        <p>Ricevi notifiche di nuovi messaggi</p>
+                        <a href="#">Attiva notifiche desktop</a>
+                    </div>
+                </div>
+
+
+
+
+
+
+
+
+
+
+
+                <div class="search-bar w100">input text</div>
+                <div class="contacts w100">contatti</div>
+
+
 
 
             </aside>
 
 
             <div class="chat">
-
+                <div class="contact-selected"></div>
 
 
             </div>
