sidebar: search bar

--- a/milestone_1/index.html
+++ b/milestone_1/index.html
@@ -39,7 +39,7 @@
                     </div>
                 </div>
                 <!-- /Avatar : IO  -->
-
+                <!-- Kill notification  -->
                 <div class="notifiche w100">
                     <div class="bell">
                         <i class="fas fa-bell-slash"></i>
@@ -49,18 +49,16 @@
                         <a href="#">Attiva notifiche desktop</a>
                     </div>
                 </div>
+                <!-- /Kill notification  -->
 
+                <!-- Container-Search BAR  -->
+                <div class="c-search-bar w100">
 
-
-
-
-
-
-
-
-
-
-                <div class="search-bar w100">input text</div>
+                    <i class="fas fa-search">
+                        <input type="text" placeholder="Cerca o inizia una nuova chat">
+                    </i>
+                </div>
+                <!-- /Container-Search BAR  -->
                 <div class="contacts w100">contatti</div>
 
 
