sidebar: contacts section

--- a/milestone_1/index.html
+++ b/milestone_1/index.html
@@ -54,12 +54,27 @@
                 <!-- Container-Search BAR  -->
                 <div class="c-search-bar w100">
 
-                    <i class="fas fa-search">
-                        <input type="text" placeholder="Cerca o inizia una nuova chat">
-                    </i>
+                    <i class="fas fa-search"> </i>
+                    <input type="text" placeholder="Cerca o inizia una nuova chat">
+
                 </div>
                 <!-- /Container-Search BAR  -->
-                <div class="contacts w100">contatti</div>
+
+                <!-- CONTATTI  -->
+                <div class="contact-section w100">
+
+                    <div class="contact">
+                        <img src="./asset/IMG/avatar_io.jpg" class="user-avatar" alt="">
+                        <p class="user-info">Nome utente</p>
+                    </div>
+
+
+
+
+
+
+                </div>
+                <!-- /CONTATTI  -->
 
 
 
