--- a/milestone_1/index.html
+++ b/milestone_1/index.html
@@ -64,26 +64,39 @@
                 <div class="contact-section w100">
 
                     <div class="contact">
-                        <img src="./asset/IMG/avatar_io.jpg" class="user-avatar" alt="">
+                        <img src="./asset/IMG/avatar_5.jpg" class="user-avatar" alt="">
                         <p class="user-info">Nome utente</p>
                     </div>
 
-
-
-
-
-
                 </div>
                 <!-- /CONTATTI  -->
-
-
-
-
             </aside>
 
 
             <div class="chat">
-                <div class="contact-selected"></div>
+
+
+                <div class="selected-contact w100">
+
+                    <div class="user">
+                        <img src="./asset/IMG/avatar_5.jpg" class="user-avatar" alt="">
+                        <div class="selected-info">
+                            <p class="user-info">Nome </p>
+                            <p class="time">Ultimo accesso</p>
+                        </div>
+                    </div>
+
+                    <div class="icons">
+                        <i class="fas fa-search"></i>
+                        <i class="fas fa-paperclip"></i>
+                        <i class="fas fa-ellipsis-v"></i>
+                    </div>
+                </div>
+
+
+
+
+
 
 
             </div>
