--- a/milestone_1/index.html
+++ b/milestone_1/index.html
@@ -25,7 +25,7 @@
             <aside class="sidebar d-flex-col">
 
                 <!-- Avatar : IO  -->
-                <div class="fixed-avatar w100">
+                <div class="fixed-avatar pl-1 w100">
 
                     <div class="user">
                         <img src="./asset/IMG/avatar_io.jpg" class="user-avatar" alt="">
@@ -39,43 +39,43 @@
                     </div>
                 </div>
                 <!-- /Avatar : IO  -->
-                <!-- Kill notification  -->
-                <div class="notifiche w100">
-                    <div class="bell">
-                        <i class="fas fa-bell-slash"></i>
+                <div class="altezza">
+                    <!-- Kill notification  -->
+                    <div class="notifiche pl-1 w100">
+                        <div class="bell">
+                            <i class="fas fa-bell-slash"></i>
+                        </div>
+                        <div class="notifiche-text">
+                            <p>Ricevi notifiche di nuovi messaggi</p>
+                            <a href="#">Attiva notifiche desktop</a>
+                        </div>
                     </div>
-                    <div class="notifiche-text">
-                        <p>Ricevi notifiche di nuovi messaggi</p>
-                        <a href="#">Attiva notifiche desktop</a>
+                    <!-- /Kill notification  -->
+
+                    <!-- Container-Search BAR  -->
+                    <div class="c-search-bar pl-1 w100">
+
+                        <i class="fas fa-search"> </i>
+                        <input type="text" placeholder="Cerca o inizia una nuova chat">
+
                     </div>
-                </div>
-                <!-- /Kill notification  -->
+                    <!-- /Container-Search BAR  -->
 
-                <!-- Container-Search BAR  -->
-                <div class="c-search-bar w100">
+                    <!-- CONTATTI  -->
+                    <div class="contact-section pl-1 w100">
 
-                    <i class="fas fa-search"> </i>
-                    <input type="text" placeholder="Cerca o inizia una nuova chat">
+                        <div class="contact">
+                            <img src="./asset/IMG/avatar_5.jpg" class="user-avatar" alt="">
+                            <p class="user-info">Nome utente</p>
+                        </div>
 
-                </div>
-                <!-- /Container-Search BAR  -->
-
-                <!-- CONTATTI  -->
-                <div class="contact-section w100">
-
-                    <div class="contact">
-                        <img src="./asset/IMG/avatar_5.jpg" class="user-avatar" alt="">
-                        <p class="user-info">Nome utente</p>
                     </div>
-
+                    <!-- /CONTATTI  -->
                 </div>
-                <!-- /CONTATTI  -->
             </aside>
 
 
             <div class="chat">
-
-
                 <div class="selected-contact w100">
 
                     <div class="user">
@@ -92,11 +92,20 @@
                         <i class="fas fa-ellipsis-v"></i>
                     </div>
                 </div>
+                <div class="altezza">
+                    <div class="main-chat">
 
 
+                    </div>
 
+                    <div class="text-message">
+                        <i class="far fa-smile"></i>
+                        <input type="text" placeholder="Scrivi un messaggio">
+                        <i class="fas fa-microphone"></i>
 
+                    </div>
 
+                </div>
 
 
             </div>
