--- a/milestone_1/index.html
+++ b/milestone_1/index.html
@@ -96,14 +96,25 @@
                     <div class="main-chat">
 
 
-                    </div>
 
+
+
+
+
+
+
+
+
+
+                    </div>
+                    <!-- SCRIVI UN MESSAGGIO` -->
                     <div class="text-message">
                         <i class="far fa-smile"></i>
                         <input type="text" placeholder="Scrivi un messaggio">
                         <i class="fas fa-microphone"></i>
 
                     </div>
+                    <!-- /SCRIVI UN MESSAGGIO` -->
 
                 </div>
 
