--- a/milestone_1/index.html
+++ b/milestone_1/index.html
@@ -81,7 +81,7 @@
                     <div class="user">
                         <img src="./asset/IMG/avatar_5.jpg" class="user-avatar" alt="">
                         <div class="selected-info">
-                            <p class="user-info">{{contacts[checkCounter].name}}</p>
+                            <p class="user-info">{{contacts[counter].name}}</p>
                             <p class="time">Ultimo accesso</p>
                         </div>
                     </div>
