ADJ :class (inviati/ricevuti)

--- a/milestone_1/index.html
+++ b/milestone_1/index.html
@@ -9,7 +9,7 @@
         integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
         crossorigin="anonymous" />
 
-    <link rel="stylesheet" href="./asset/CSS/style.css">
+    <link rel="stylesheet" href="../milestone_1/asset/CSS/style.css">
     <title>Boolzapp 1</title>
 </head>
 
@@ -166,7 +166,7 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
-    <script src="./asset/JS/main.js"></script>
+    <script src="../milestone_1/asset/JS/main.js"></script>
 </body>
 
 </html>
