--- a/milestone_2/index.html
+++ b/milestone_2/index.html
@@ -9,7 +9,7 @@
         integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
         crossorigin="anonymous" />
 
-    <link rel="stylesheet" href="./asset/CSS/style.css">
+    <link rel="stylesheet" href="../milestone_2/asset/CSS/style.css">
     <title>Boolzapp 1</title>
 </head>
 
@@ -83,7 +83,7 @@
                         <img :src="'./asset/IMG/avatar' +contacts[counter].avatar+ '.jpg'" class="user-avatar" alt="">
                         <div class="selected-info">
                             <p class="user-info">{{contacts[counter].name}}</p>
-                            <p class="time">Ultimo accesso in data {{calendario[0]+ " alle ore " + calendario[1]}}
+                            <p class="time">
                             </p>
                         </div>
                     </div>
@@ -95,38 +95,19 @@
                     </div>
                 </div>
                 <div class="altezza">
+                    <!-- CONVERSAZIONI UTENTI  -->
                     <div class="main-chat">
 
-
-                        <div class="inviati" v-for="message in contacts[counter].messages"
-                            v-if="message.status=='sent'">
+                        <div :class="(message.status=='sent') ? 'inviati' : 'ricevuti' "
+                            v-for="message in contacts[counter].messages">
                             <p class="mess">{{message.text}}</p>
                             <p class="time">{{message.date}}</p>
                         </div>
-
-
-                        <div class="ricevuti" v-else>
-
-                            <p class="mess">{{message.text}}</p>
-                            <p class="time">{{message.date}}</p>
-
-
-
-                        </div>
-
-
-
-
-
-
-
-
-
-
-
-
 
                     </div>
+
+                    <!-- /CONVERSAZIONI UTENTI  -->
+
                     <!-- SCRIVI UN MESSAGGIO` -->
                     <div class="text-message">
                         <i class="far fa-smile"></i>
@@ -166,7 +147,7 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
-    <script src="./asset/JS/main.js"></script>
+    <script src="../milestone_2/asset/JS/main.js"></script>
 </body>
 
 </html>
