--- a/milestone_4/index.html
+++ b/milestone_4/index.html
@@ -150,6 +150,7 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
+    <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
     <script src="../milestone_4/asset/JS/main.js"></script>
 </body>
 
