Upgrade deleteFunction- still not working

--- a/milestone_5/index.html
+++ b/milestone_5/index.html
@@ -110,7 +110,7 @@
                             </div>
                             <div class="drop-menu" :class="(dropMenu===mindex) ? 'visible' : 'not-visible'">
                                 <p class="info-msg">Message info</p>
-                                <p @click="deleteMessage(counter,mindex)" class="delete-msg">Delete message</p>
+                                <p @click="deleteMessage(counter,dropMenu)" class="delete-msg">Delete message</p>
                             </div>
                         </div>
 
